Upper case and other stories

--- a/comparitron3000/comparitron.ui/comparitron.ui.csproj
+++ b/comparitron3000/comparitron.ui/comparitron.ui.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Components\ComparisonViewer.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Components\uiTypes.cs" />
     <Compile Include="Forms\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
