--- a/comparitron3000/comparitron.ui/comparitron.ui.csproj
+++ b/comparitron3000/comparitron.ui/comparitron.ui.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\comparitron.ComparitronCore.datasource" />
     <None Include="Properties\Settings.settings">
@@ -125,6 +126,18 @@
       <Project>{b4e04034-ec6c-47ef-8ed1-1d616b02406f}</Project>
       <Name>comparitron</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btnNext.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btnBack.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btnSkipNext.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btnSkipBack.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
