--- a/comparitron3000/comparitron/comparitron.csproj
+++ b/comparitron3000/comparitron/comparitron.csproj
@@ -43,6 +43,7 @@
     <Compile Include="comparitronCore.cs" />
     <Compile Include="Components\ComparitronExporter.cs" />
     <Compile Include="Components\ComparitronItem.cs" />
+    <Compile Include="Components\ComparitronSaveFormat.cs" />
     <Compile Include="Components\Types.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="settingsCore.cs" />
